# discord-bot-rust

./: .gitignore  Cargo.toml  save_data.default.json  save_data.json
src/: example1.rs  main.rs
