[package]
name = "discordBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.11", default-features = true, features = ['collector']}

