[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
lazy_static = "1.4.0"
serenity = { version = "0.11", default-features = true, features = ['collector', 'model']}

